# akari-bot-webui

./: .env  .env.production  .eslintrc.js  .gitignore  .pre-commit-config.yaml  README.md  index.html  package-lock.json  package.json  pyproject.toml  renovate.json  vite.config.js  vite.config.mjs
.github/workflows/: build-dist.yml  build_dist.yml  codeql_analysis.yml  pypi-publish.yml
public/: config.json  index.html
src/: App.vue  axios.js  axios.mjs  const.js  dev.js  element-plus-langmap.js  localStorageJson.js  main.js  router.js  style.css
src/assets/: LICENSE
src/components/: AnalyticsCard.vue  Content.vue  DemoWatermark.vue  Header.vue  LoginModal.vue  PasswordModal.vue  Sidebar.vue  SidebarDrawer.vue  SuggestSetPasswordModal.vue  confirmExternalLink.js
src/components/config/: SourceEditor.vue  VisibleEditor.vue
src/components/dashboard/: AnalyticsCard.vue  ServerInfoCard.vue
src/components/data/: SessionManager.vue  UserManager.vue
src/components/database/: DataModels.vue  SQLConsole.vue
src/components/session/: SenderManager.vue  TargetManager.vue
src/components/setting/: ChangePassword.vue  ChangePasswordForm.vue  RestartBot.vue  (+5 more)
src/i18n/: en_us.json  ja_jp.json  ko_kr.json  zh_cn.json  zh_tw.json
src/mock/: api.js  log_ws.js
src/pages/: about.vue  chat.vue  config.vue  dashboard.vue  data.vue  database.vue  files.vue  logs.vue  modules.vue  notFound.vue  session.vue  setting.vue
src/views/: AboutView.vue  ChatView.vue  ConfigView.vue  DashboardView.vue  DataView.vue  LoggerView.vue  LogsView.vue  ModulesView.vue  SettingView.vue
(+2 files in other folders)
