[project]
name = "akari-bot-webui"
version = "0.3.8"
description = ""
authors = [
    { name = "DoroWolf", email = "dorowolf314@gmail.com" },
    { name = "_LittleC_", email = "i@ltlec.com" },
    { name = "OasisAkari", email = "oasisakari@gmail.com" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
license = "AGPL-3.0"
dependencies = []

[project.urls]
Homepage = "https://github.com/Teahouse-Studios/akari-bot-webui"
Issues = "https://github.com/Teahouse-Studios/akari-bot-webui/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["/akari_bot_webui"]

[tool.hatch.build.targets.wheel]
packages = ["akari_bot_webui"]